Spacing fixes

--- a/media/css/cms/flare-intro.css
+++ b/media/css/cms/flare-intro.css
@@ -8,7 +8,7 @@
     text-align: center;
     font-family: var(--font-family-inter);
     background-color: light-dark(var(--neutrals-ash), var(--neutrals-black));
-    padding: calc(var(--scale-80) * 1px) calc(var(--scale-24) * 1px);
+    padding: calc(var(--scale-80) * 1px) calc(var(--scale-40) * 1px);
     max-width: 1440px;
     margin: 0 auto;
 }
