--- a/media/css/cms/flare-mediacontent.css
+++ b/media/css/cms/flare-mediacontent.css
@@ -103,3 +103,10 @@
     height: auto;
     border-radius: calc(var(--scale-16) * 1px);
 }
+
+.fl-mediacontent-media iframe {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+    border-radius: calc(var(--scale-16) * 1px);
+}
